2006-08-17  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Fix help: It got broken while rearranging the plugin stuff, now it's
	properly fixed.
	* New Auth Framework: forgot to create the InvalidPassword exception.
	It's a RuntimeError now.
	* Fix help: this time for real (or so I hope).

2006-08-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Subregistry: force prefix to be a String with to_s

2006-08-11  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* AutoOp plugin: adapted to the new IRC framework.
	* AutoOp plugin: trigger autoop on nick change too.
	* New Auth Framework: allow? method now informs a user when they don't
	have permission to do what they asked for.
	* New nickreply and nickokay methods: they act like the old reply
	method, but include the nick of the user the bot is replying to when
	talking in public. The usual reply method can be configured to act
	like this as default.

2006-08-10  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Fix a bug in new IRC Framework: the list of channels a quitting user was
	on was not built correctly, causing an exception when the user was not
	in the first channel in the list of channels.
	* Fix a bug in new Auth Framework: BotUser's name is changed via
	username=, not name=.
	* New HalfLife 2 plugin from ocr: queries online servers for online
	status and number of users.

2006-08-07  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Add kick method to kernel: plugins can now use
		@bot.kick channel, user, reason
	to kick a user from a channel
	* RSS plugin: fix rewatch_rss method
	* RSS plugin: the different ways to represent channels before and
	after the New IRC Framework was causing strange problems such as
	watched feed not being listed as such, undeletable watches, double
	watches etc. Fix this by checking both for the Channel objects and
	their to_s form when checking for watches or deleting them.

2006-08-06  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
